# course_work_5

./: README.md  createdb.sql  main.py  pyproject.toml  tesx.txt
src/: HH_API.py  dbmanager.py  employer_vacancies.py  search_employers.py
